--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <title>Hyrax AI | Adaptive AI Learning Platform</title>
     <meta name="description" content="AI-powered platform offering adaptive problems with personalized difficulty on various subjects. Progress at your own pace, fueling efficient and optimized growth for every individual&apos;s path.">
     <meta name="framer-search-index" content="https://framerusercontent.com/sites/799XubwP3G1g8D9RkS6inq/searchIndex-qisfjvaSnvzp.json">
-    <link rel="icon" href="https://framerusercontent.com/images/98jhGnmrP8PS7VTcACkPsh1MZV0.png">
+    <link rel="icon" href="hyraxLogoCircle.png">
+    <link rel="shortcut icon" href="hyraxLogoCircle.png">
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Hyrax AI | Adaptive AI Learning Platform">
