--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <title>Hyrax AI | Adaptive AI Learning Platform</title>
     <meta name="description" content="AI-powered platform offering adaptive problems with personalized difficulty on various subjects. Progress at your own pace, fueling efficient and optimized growth for every individual&apos;s path.">
     <meta name="framer-search-index" content="searchIndex.json">
-    <link rel="icon" href="https://hyraxapp.com/hyraxCircle144px.png">
-    <link rel="shortcut icon" href="https://hyraxapp.com/hyraxCircle144px.png">
+    <link rel="icon" href="%PUBLIC_URL%/hyraxCircle144px.png">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/hyraxCircle144px.png">
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Hyrax AI | Adaptive AI Learning Platform">
