--- a/tutors.html
+++ b/tutors.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tutors | Hyrax AI</title>
-    <link href="https://fonts.googleapis.com/css2?family=Alexandria:wght@400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alexandria:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
  
     <style>
         body {
@@ -43,8 +43,8 @@
             flex-grow: 1;
             justify-content: center;
             align-items: center;
-            font-weight: lighter;
-            font-size: 14px;
+            font-weight:450;
+            font-size: 15px;
             font-family: 'Alexandria';
             margin-right: 1%;
             
@@ -53,7 +53,7 @@
         .nav-buttons a {
             color: white;
             text-decoration: none;
-            font-weight: 5;
+            font-weight: 350;
         }
 
         .nav-buttons a:hover {
@@ -65,12 +65,14 @@
             text-align:center;
             margin-right:1%;
         }
-
         .desc1 {
             flex: 1;
             text-align: left;
             font-family: 'Alexandria';
-            font-size: 27px;
+            font-size: 18px;
+            font-weight:300;
+            line-height: 2;
+            margin-top: -10px;
         }
 
         .button {
@@ -142,23 +144,31 @@
         }
 
         .description {
+            margin-top: -10px;
             font-size: 33px;
             line-height: 1.6;
             font-family: 'Alexandria';
-            font-weight: 100;
+            font-weight: 500;
+            font-size: 60px;
             color: skyblue;
         }
 
         .image {
             flex: 1;
-            width: 300px;
+            width: 300%;
+            height: 300%;
         }
-
+        .image img {
+            margin-top: 35px;
+            width: 100%;
+            filter: brightness(1.2) contrast(1.3);
+        }
         .logo {
             display: flex;
             align-items: center;
             position: relative;
-            top: 5px; left: 6px;
+            top: 4px; left: 8px;
+            font-weight: 350;
         }
 
         @media (max-width: 768px) {
@@ -213,7 +223,7 @@
             <img src="tammychang_edited_edited_edited.png" alt="Image below title">
         </div>
         <div class="content-right">
-            <p class="description">Currently partnering with Tammy Chang Tutoring Prep!</p>
+            <p class="description">New Partner!</p>
             <p class="desc1">We are thrilled to partner with Tammy Chang Test Prep, a premier Bay Area tutoring service known for over 15 years of excellence. Tammy Chang Test Prep has helped countless students achieve their academic dreams, with alumni attending prestigious institutions such as Harvard, MIT, Stanford, Princeton, Yale, UCLA, UC Berkeley, Columbia, and many more. Our machine learning powered platform currently serves as a practice tool for SAT and PSAT preparation.</p>
             <p class="desc1">- Visit at <a href="https://www.tammychangtestprep.com/" style="color: skyblue;">Tammy Chang Test Prep</a></p>
         </div>
